plugins {
    id 'java'
}

group 'com.zlrx.progtech'
version '1.0.1'

java.sourceCompatibility = JavaVersion.VERSION_15

repositories {
    mavenCentral()
}

jar{
    manifest{
        attributes "Main-Class": "com.zlrx.progtech.vegetation.simulator.Main"
    }
}

dependencies {
    implementation 'org.projectlombok:lombok:1.18.16'

    annotationProcessor 'org.projectlombok:lombok:1.18.16'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testImplementation 'org.mockito:mockito-core:3.7.7'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.7.7'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform()
}